--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base{
+    div {
+        font-family: 'Poppins', sans;
+    }
+}
